# otree-test

./: .gitignore  Makefile  README.md  cloudbuild.yaml  pyproject.toml
docker/: Dockerfile
experiments/: settings.py
experiments/_templates/global/: Page.html
experiments/payment_info/: PaymentInfo.html  __init__.py
experiments/survey/: CognitiveReflectionTest.html  Demographics.html  __init__.py  tests.py
