[tool.poetry]
name = "otree_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
rich = "^10.11.0"
pandas = "^1.3.3"
numpy = "^1.21.2"
pydantic = "^1.8.2"
otree = "^5.8.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
jupyter = "^1.0.0"
pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^6.2.4"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py38"
isort_known_first_party = ["otree_test"]

[tool.pysen.lint.source]
  includes = ["."]
  excludes = [".venv/"]

[[tool.pysen.lint.mypy_targets]]
  paths = ["otree_test/", "tests/"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
